--- a/Index.html
+++ b/Index.html
@@ -6,29 +6,53 @@
   <title>Mazarx | Cyberpunk Profile</title>
   <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@600&family=Share+Tech+Mono&display=swap" rel="stylesheet">
   <style>
-    * {
-      margin: 0;
-      padding: 0;
-      box-sizing: border-box;
-    }
-
     body {
+      margin: 0;
       background: radial-gradient(ellipse at center, #0f0f0f 0%, #000000 100%);
       color: #f0f0f0;
       font-family: 'Share Tech Mono', monospace;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      padding: 2rem;
-      min-height: 100vh;
     }
 
-    h1 {
-      font-family: 'Orbitron', sans-serif;
-      font-size: 3rem;
-      color: #ff00ff;
-      text-shadow: 0 0 10px #ff00ff;
+    .login-screen, .main-content {
+      display: none;
+      height: 100vh;
+      width: 100vw;
+      justify-content: center;
+      align-items: center;
+      flex-direction: column;
+      padding: 2rem;
+    }
+
+    .login-screen {
+      display: flex;
+    }
+
+    input[type="password"] {
+      background: #111;
+      border: 2px solid #00ffff;
+      color: #00ffff;
+      font-size: 1.2rem;
+      padding: 10px;
+      border-radius: 10px;
       margin-bottom: 1rem;
+      outline: none;
+    }
+
+    button {
+      padding: 10px 20px;
+      background-color: #ff00ff;
+      border: none;
+      color: #fff;
+      font-weight: bold;
+      font-family: 'Orbitron', sans-serif;
+      cursor: pointer;
+      border-radius: 10px;
+      box-shadow: 0 0 10px #ff00ff;
+      transition: background-color 0.3s;
+    }
+
+    button:hover {
+      background-color: #ff44ff;
     }
 
     .avatar {
@@ -40,9 +64,24 @@
       box-shadow: 0 0 15px #00ffff;
     }
 
+    .main-content {
+      display: none;
+      flex-direction: column;
+      align-items: center;
+      text-align: center;
+      padding: 2rem;
+    }
+
+    h1 {
+      font-family: 'Orbitron', sans-serif;
+      font-size: 3rem;
+      color: #ff00ff;
+      text-shadow: 0 0 10px #ff00ff;
+      margin-bottom: 1rem;
+    }
+
     .bio {
       max-width: 600px;
-      text-align: center;
       margin-bottom: 2rem;
       color: #ccc;
       font-size: 1.1rem;
@@ -53,7 +92,6 @@
       color: #00ffff;
       text-decoration: none;
       font-size: 1.1rem;
-      transition: 0.3s;
     }
 
     .socials a:hover {
@@ -79,44 +117,47 @@
       color: #aaa;
       border-top: 1px solid #222;
       padding-top: 1rem;
-      text-align: center;
-    }
-
-    @media screen and (max-width: 600px) {
-      h1 {
-        font-size: 2.2rem;
-      }
-      .bio {
-        font-size: 1rem;
-      }
     }
   </style>
 </head>
 <body>
-  <img src="https://i.imgur.com/3vQkL6L.png" alt="Mazarx Avatar" class="avatar" />
 
-  <h1>Mazarx</h1>
-
-  <p class="bio">
-    Productor de hardstyle, hardcore y frenchcore.<br />
-    Energía cruda, sonidos extremos. Vive el rave.
-  </p>
-
-  <div class="socials">
-    <a href="https://soundcloud.com/" target="_blank">SoundCloud</a>
-    <a href="https://spotify.com/" target="_blank">Spotify</a>
-    <a href="https://instagram.com/" target="_blank">Instagram</a>
+  <div class="login-screen" id="login-screen">
+    <input type="password" id="password" placeholder="Introduce la contraseña" />
+    <button onclick="checkPassword()">Entrar</button>
   </div>
 
-  <div class="music-player">
-    <iframe scrolling="no" frameborder="no" allow="autoplay"
-      src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/1376500010&color=%23ff00ff&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true">
-    </iframe>
+  <div class="main-content" id="main-content">
+    <img src="https://i.imgur.com/3vQkL6L.png" alt="Mazarx Avatar" class="avatar" />
+    <h1>Mazarx</h1>
+    <p class="bio">
+      Productor de hardstyle, hardcore y frenchcore.<br />
+      Energía cruda, sonidos extremos. Vive el rave.
+    </p>
+
+    <div class="socials">
+      <a href="https://soundcloud.com/" target="_blank">SoundCloud</a>
+      <a href="https://spotify.com/" target="_blank">Spotify</a>
+      <a href="https://instagram.com/" target="_blank">Instagram</a>
+    </div>
+
+    <div class="music-player">
+      <iframe scrolling="no" frameborder="no" allow="autoplay"
+        src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/1376500010&color=%23ff00ff&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true">
+      </iframe>
+    </div>
+
+    <div class="event">
+      📍 Próximo evento: <strong>CyberRave 2025</strong><br />
+      🗓️ 3 de mayo – Bilbao  
+    </div>
   </div>
 
-  <div class="event">
-    📍 Próximo evento: <strong>CyberRave 2025</strong><br />
-    🗓️ 3 de mayo – Bilbao  
-  </div>
-</body>
-</html>
+  <script>
+    const CORRECT_PASSWORD = "mazarx2025";
+
+    function checkPassword() {
+      const input = document.getElementById("password").value;
+      if (input === CORRECT_PASSWORD) {
+        document.getElementById("login-screen").style.display = "none";
+        document.getElementById("main-content").style.display = "flex
